option java_package = "ru.kt15.finomen.neerc.core.net.proto";

enum EventType {
	TIMER_UPDATE = 0;
	SUBMIT = 1;
	NOTIFICATION = 2;
}

enum TimerStatus {
	BEFORE = 0;
	RUNNING = 1;
	OVER = 4;
}

message RegisterListener {
	required uint32 interval = 1;
	repeated EventType events = 2;
}

message TimerUpdate {
	required uint64 contestDuration = 1;
	required uint64 remainingTime = 2;
	required TimerStatus status = 3;
	required bool frozen = 4;
}